WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51000
Re land Purpose after bad merge
https://bugs.webkit.org/show_bug.cgi?id=51000
Summary
Re land Purpose after bad merge
Gavin Peters
Reported
2010-12-13 18:55:53 PST
https://bugs.webkit.org/show_bug.cgi?id=47802
didn't land all that well, as a bad merge the next day
https://bugs.webkit.org/show_bug.cgi?id=27165
blew away this change. This patch just re-lands that change, along with an inconsequential test fix that abarth missed in 47802.
Attachments
Patch
(2.33 KB, patch)
2010-12-13 18:59 PST
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Peters
Comment 1
2010-12-13 18:59:58 PST
Created
attachment 76484
[details]
Patch
WebKit Review Bot
Comment 2
2010-12-13 19:21:41 PST
Comment on
attachment 76484
[details]
Patch Clearing flags on attachment: 76484 Committed
r73996
: <
http://trac.webkit.org/changeset/73996
>
WebKit Review Bot
Comment 3
2010-12-13 19:21:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug