2010-12-13  Gavin Peters  <gavinp@chromium.org>

Reviewed by Adam Barth.

        Re land Purpose after bad merge
        https://bugs.webkit.org/show_bug.cgi?id=51000

        * http/tests/misc/resources/prefetch-purpose.php:
2010-12-13  Gavin Peters  <gavinp@chromium.org>

        Reviewed by Adam Barth.

        Re land Purpose after bad merge
        https://bugs.webkit.org/show_bug.cgi?id=51000

        * loader/loader.cpp:
        (WebCore::Loader::load):

Canonical link: https://commits.webkit.org/64345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73996 268f45cc-cd09-0410-ab3c-d52691b4dbfc